# decision-copilot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
decision_copilot/: __init__.py  cli.py  config.py  database.py  models.py
decision_copilot/agents/: base.py  cons.py  facts.py  planner.py  pros.py  risks.py  synth.py
decision_copilot/cli_commands/: create.py  explain.py  export.py  init_db.py  list_cmd.py  report.py  run.py  status.py
decision_copilot/llm/: client.py
decision_copilot/orchestrator/: orchestrator.py
decision_copilot/queue/: connection.py  tasks.py
decision_copilot/services/: decision_service.py
docs/: agent-contracts.md  architecture.md  usage.md
scripts/: worker.py
